2011-07-21  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/mpfr.R ([[): finished adding a '[[' method which returns one
	"mpfr" number (instead of a "mpfr1" one).  Needed a bit of changes,
	notably in .getPrec() etc.

2011-05-12  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.3-0 -- "finished" integrateR(); using vapply()

2011-04-30  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/special-fun.R (Bernoulli): B(0) = 1  now also works.

2011-03-09  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/integrate-Romberg.R (integrateR): new pure Rfunction for Romberg
	integration; works with "mpfr".
	* man/integrateR.Rd: docu & examples.

2011-01-18  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Math.R (roundMpfr): "round" to precBits (bits!) also to
	*increase* precision for further computation.
	* src/utils.c (my_mpfr_round): C implementation.
	* R/Math.R (factorialMpfr, pochMpfr): new functions, e.g., as tools
	for choose().
	* src/utils.c (my_mpfr_poch, R_mpfr_fac): underlying C code.

2011-01-17  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/as.R (formatMpfr): fix the case where 'Ex == digits'

2011-01-16  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/Ops.c (Math_mpfr): enable digamma() for mpfr 3.0.0 and later
	(Math_mpfr): implement  cummax(), cummin(), cumprod(), cumsum()

	* src/Ops.c, R/special-fun.R: enable Airy function ai()

2011-01-15  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/mpfr.R (.getPrec): return default precision instead of NULL for
	0-length input; this enables  <mpfr>[FALSE] <- 1.

	* R/array.R (mpfr2array): new utility as alternative to 'dim(.) <- *'

	* R/as.R (mpfr): now also works with matrix or array input,
	returning "mpfrArray"/"..Matrix".

2011-01-10  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.2-4

	* R/Math.R (factorial): improve integer test (thanks to Petr Savicky).

2010-01-22  Martin Maechler  <maechler@stat.math.ethz.ch>
